 319.	[func]		The named.conf "controls" statement is now used
			to configure the OMAPI command channel.

 318.	[func]		dns_c_ndcctx_destroy() could never return anything
			except ISC_R_SUCCESS; made it have void return instead.

 317.	[func]		Use callbacks from libomapi to determine if a
			new connection is valid, and if a key requested
			to be used with that connection is valid.

 316.	[bug]		Generate a warning if we detect an unexpected <eof>
			but treat as <eol><eof>.

 315.	[bug]		Handle non-empty blanks lines. (RT #163)

 314.	[func]		The named.conf controls statement can now have 
			more than one key specified for the inet clause.

 313.	[bug]		When parsing resolv.conf, don't terminate on an
			error.  Instead, parse as much as possible, but
			still return an error if one was found.

 312.	[bug]		Increase the number of allowed elements in the
			resolv.conf search path from 6 to 8.  If there
			are more than this, ignore the remainder rather
			than returning a failure in lwres_conf_parse.

 311.	[bug]		lwres_conf_parse failed when the first line of
			resolv.conf was empty or a comment.

 310.	[func]		Changes to named.conf "controls" statement (inet
			subtype only)

			  - support "keys" clause

				controls {
				   inet * port 1024
					allow { any; } keys { "foo"; }
				}

			  - allow "port xxx" to be left out of statement,
			    in which case it defaults to omapi's default port
			    of 953.
 
 309.	[bug]		When sending a referral, the server did not look
			for name server addresses as glue in the zone
			holding the NS RRset in the case where this zone
			was not the same as the one where it looked for
			name server addresses as authoritative data.

 308.	[bug]		Treat a SOA record not at top of zone as an error
			when loading a zone. (RT #154)

 307.	[bug]		When canceling a query, the resolver didn't check for
			isc_socket_sendto() calls that did not yet have their
			completion events posted, so it could (rarely) end up